--- a/pipeline.website1.fa1.yml
+++ b/pipeline.website1.fa1.yml
@@ -4,7 +4,10 @@
 # https://docs.microsoft.com/en-us/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-- main
+ batch: true
+ branches:
+   include:
+    - master
 
 variables:
   # Azure Resource Manager connection created during pipeline creation
