Update pipeline.website1.fa1.yml for Azure Pipelines
added deployment task AzureFileCopy@4 to copy the files for the website 1 static content from C:\VSProjects\XSpace\WebSite1\Contents
to the sawebsite120201221\$web blob container

--- a/pipeline.website1.fa1.yml
+++ b/pipeline.website1.fa1.yml
@@ -77,3 +77,12 @@ stages:
               appType: functionApp
               appName: $(functionAppName)
               package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
+          - task: AzureFileCopy@4
+            inputs:
+              SourcePath: '$(System.DefaultWorkingDirectory)/WebSite1/Contents'
+              azureSubscription: '$(azureSubscription)'
+              Destination: 'AzureBlob'
+              storage: 'sawebsite120201221'
+              ContainerName: '$web'
+
+
