Update pipeline.website1.fa1.yml for Azure Pipelines
changed source path to $(Build.SourcesDirectory)/WebSite1/Contents for task AzureFileCopy@4 task and added display name

--- a/pipeline.website1.fa1.yml
+++ b/pipeline.website1.fa1.yml
@@ -78,8 +78,9 @@ stages:
               appName: $(functionAppName)
               package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
           - task: AzureFileCopy@4
-            inputs:
-              SourcePath: '$(System.DefaultWorkingDirectory)/WebSite1/Contents'
+            displayName: 'synch static files to blob container' 
+            inputs:            
+              SourcePath: '$(Build.SourcesDirectory)/WebSite1/Contents'
               azureSubscription: '$(azureSubscription)'
               Destination: 'AzureBlob'
               storage: 'sawebsite120201221'
