Update pipeline.website1.fa1.yml for Azure Pipelines

--- a/pipeline.website1.fa1.yml
+++ b/pipeline.website1.fa1.yml
@@ -44,7 +44,7 @@ stages:
     - task: AzureFileCopy@4
       displayName: 'synch static files to blob container' 
       inputs:            
-        SourcePath: '$(Build.SourcesDirectory)/WebSite1/Contents'                            
+        SourcePath: '$(Build.SourcesDirectory)/WebSite1/Contents/*'                            
         azureSubscription: '$(azureSubscription)'
         Destination: 'AzureBlob'
         storage: 'sawebsite120201221'
