--- a/pipeline.website1.fa1.yml
+++ b/pipeline.website1.fa1.yml
@@ -47,6 +47,7 @@ stages:
       inputs:
         displayName: 'Synch static files to blob container'
         targetType: 'filePath'
+        workingDirectory: $(System.DefaultWorkingDirectory)\Website1
         filePath: $(System.DefaultWorkingDirectory)\Website1\006_pipeline_fa1_sync.ps1                
 
     # Keep this task here until the community updates it to perform a synch instead of a copy    
